<resources>
    <string name="app_name">ParkSF</string>

    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="parked">Parking</string>
    <string name="action_overflow">Action overflow</string>

    <string name="favorites">Add to favorites</string>
    <string name="settings">Settings</string>

    <string name="filter_1">Parking likelihood rating</string>
    <string name="filter_2">Parking restriction</string>
    <string name="filter_3">Parking safety</string>
    <string name="filter_4">Parking structure</string>
    <string name="filter_5">Traffic</string>
    <string name="filter_6">Buildings</string>

    <string name="map_view">Map View</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer closed</string>

    <string-array name="nav_titles_array">
        <item name="nav_1">Normal view</item>
        <item name="nav_2">Satellite view</item>
        <item name="nav_3">Terrain view</item>
        <item name="nav_4">Hybrid view</item>
        <item name="nav_5">Show favorites</item>
    </string-array>

    <string name="title_activity_splash_activity">splash_activity</string>
    <string name="slogan">Welcome to YouPark!</string>
    <string name="start">Continue</string>
    <string name="powered_by">Spring 2015 - CSC413</string>
    <string name="team_name">Team 4</string>

</resources>